chore: fix tmux source-file

--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -26,7 +26,7 @@ bind l select-pane -R
 bind i display-panes
 
 ### reload config file
-bind C-r source-file ~/.tmux.conf
+bind C-r source-file ~/.config/tmux/tmux.conf
 set-option -g default-command "reattach-to-user-namespace -l zsh"
 #
 ###set-option -g prefix C-f
